--- a/composer.json
+++ b/composer.json
@@ -22,7 +22,10 @@
         ],
         "psr-4": {
             "App\\": "app/"
-        }
+        },
+        "files":[
+            "app/Utilities/function.php"
+        ]
     },
     "autoload-dev": {
         "classmap": [
