--- a/composer.json
+++ b/composer.json
@@ -7,6 +7,7 @@
     "require": {
         "php": ">=5.6.4",
         "laravel/framework": "5.3.*",
+        "oseintow/laravel-shopify": "^1.0",
         "spatie/laravel-medialibrary": "^4.10"
     },
     "require-dev": {
